[gd_scene load_steps=24 format=3 uid="uid://bq4icvsbh2qyg"]

[ext_resource type="Script" uid="uid://bji5gcen6oorc" path="res://stove_1.gd" id="1_gij4g"]
[ext_resource type="Texture2D" uid="uid://beadigyfjwf6l" path="res://Inventory/InventorySprites/InventoryRect.png" id="2_k14xl"]
[ext_resource type="PackedScene" uid="uid://b8m5u0iygxod5" path="res://Inventory/InvSlots.tscn" id="3_6acnr"]
[ext_resource type="Texture2D" uid="uid://br3axtxxam50y" path="res://IngredientMenu/Ingredient_Sprite/spaghetti cooked.png" id="4_jli51"]
[ext_resource type="Texture2D" uid="uid://bscsd1tq8d4kq" path="res://IngredientMenu/Ingredient_Sprite/aglio olio.png" id="5_s77xn"]
[ext_resource type="Texture2D" uid="uid://cvevoov0s56yu" path="res://IngredientMenu/Ingredient_Sprite/bolognese.png" id="6_anl77"]
[ext_resource type="Texture2D" uid="uid://c3nahgv8r72hg" path="res://IngredientMenu/Ingredient_Sprite/carbonara.png" id="7_2vxsl"]
[ext_resource type="Texture2D" uid="uid://cvbswq0p4t8a0" path="res://IngredientMenu/Ingredient_Sprite/selects.png" id="8_frvdk"]
[ext_resource type="Texture2D" uid="uid://byy1iwm5st1bl" path="res://IngredientMenu/Ingredient_Sprite/selects_clicked.png" id="9_it2lg"]
[ext_resource type="Texture2D" uid="uid://ouc1g0wn6kxu" path="res://IngredientMenu/Ingredient_Sprite/BeefLabel (1).png" id="10_jli51"]
[ext_resource type="Texture2D" uid="uid://0sej6igb337m" path="res://IngredientMenu/Ingredient_Sprite/chickLabel (1).png" id="11_s77xn"]
[ext_resource type="Texture2D" uid="uid://b8xxyqfsa6gsm" path="res://IngredientMenu/Ingredient_Sprite/beef cooked (1).png" id="12_i5mpt"]
[ext_resource type="Texture2D" uid="uid://d1kvqlj4ko8t6" path="res://IngredientMenu/Ingredient_Sprite/patty cooked.png" id="13_u1ehg"]
[ext_resource type="Texture2D" uid="uid://8kpma8wth4kb" path="res://IngredientMenu/Ingredient_Sprite/lamb cooked.png" id="14_pvqke"]
[ext_resource type="Texture2D" uid="uid://dwmn5e3k7p8w7" path="res://IngredientMenu/Ingredient_Sprite/chicken cooked.png" id="15_8mi7o"]
[ext_resource type="Texture2D" uid="uid://bxrsrx50ff8o0" path="res://IngredientMenu/Ingredient_Sprite/LambLabel (1).png" id="16_anl77"]
[ext_resource type="Texture2D" uid="uid://c1hnlasopmwto" path="res://IngredientMenu/Ingredient_Sprite/meat beef.png" id="17_ek6kc"]
[ext_resource type="Texture2D" uid="uid://cs8yvh86v480c" path="res://IngredientMenu/Ingredient_Sprite/burger.png" id="18_dpvpa"]
[ext_resource type="Texture2D" uid="uid://cfqslvukxdior" path="res://IngredientMenu/Ingredient_Sprite/meat lamb.png" id="19_skfyl"]
[ext_resource type="Texture2D" uid="uid://p0fwxh5vhdl5" path="res://IngredientMenu/Ingredient_Sprite/meat chicken.png" id="20_v28cv"]
[ext_resource type="Texture2D" uid="uid://cncbc65caocb7" path="res://IngredientMenu/Ingredient_Sprite/vegeLabel.png" id="21_2vxsl"]
[ext_resource type="Texture2D" uid="uid://cft82glfu4q7o" path="res://IngredientMenu/Ingredient_Sprite/otherLabel.png" id="22_frvdk"]
[ext_resource type="Texture2D" uid="uid://bkrsxvd6fdeoj" path="res://IngredientMenu/Ingredient_Sprite/egg.png" id="23_it2lg"]

[node name="stove1" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 154.0
offset_bottom = 118.0
script = ExtResource("1_gij4g")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 154.0
offset_bottom = 158.0
texture = ExtResource("2_k14xl")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 0
offset_left = 6.0
offset_top = 7.0
offset_right = 146.0
offset_bottom = 29.0
columns = 6

[node name="InvSlots" parent="NinePatchRect/GridContainer" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer/InvSlots"]
layout_mode = 0
offset_left = 5.0
offset_top = 1.0
offset_right = 14.0
offset_bottom = 19.0
texture = ExtResource("4_jli51")
expand_mode = 1

[node name="InvSlots2" parent="NinePatchRect/GridContainer" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer/InvSlots2"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 19.0
offset_bottom = 18.0
texture = ExtResource("5_s77xn")
expand_mode = 1

[node name="InvSlots3" parent="NinePatchRect/GridContainer" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer/InvSlots3"]
layout_mode = 0
offset_top = 1.0
offset_right = 20.0
offset_bottom = 18.0
texture = ExtResource("6_anl77")
expand_mode = 1

[node name="InvSlots4" parent="NinePatchRect/GridContainer" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer/InvSlots4"]
layout_mode = 0
offset_top = 1.0
offset_right = 20.0
offset_bottom = 18.0
texture = ExtResource("7_2vxsl")
expand_mode = 1

[node name="spaghetti cooked" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 4.0
offset_top = 28.0
offset_right = 28.0
offset_bottom = 37.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="Aglio olio" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 28.0
offset_top = 28.0
offset_right = 52.0
offset_bottom = 37.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="Bolognese" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 53.0
offset_top = 28.0
offset_right = 77.0
offset_bottom = 37.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="Carbonara" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 77.0
offset_top = 28.0
offset_right = 101.0
offset_bottom = 37.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="TextureRect" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 4.0
offset_top = 38.0
offset_right = 26.0
offset_bottom = 48.0
texture = ExtResource("10_jli51")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 100.0
offset_top = 38.0
offset_right = 125.0
offset_bottom = 47.0
texture = ExtResource("11_s77xn")
expand_mode = 1

[node name="GridContainer2" type="GridContainer" parent="NinePatchRect"]
layout_mode = 0
offset_left = 5.0
offset_top = 48.0
offset_right = 145.0
offset_bottom = 68.0
columns = 6

[node name="InvSlots" parent="NinePatchRect/GridContainer2" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer2/InvSlots"]
layout_mode = 0
offset_top = -1.0
offset_right = 20.0
offset_bottom = 21.0
texture = ExtResource("12_i5mpt")
expand_mode = 1

[node name="InvSlots2" parent="NinePatchRect/GridContainer2" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer2/InvSlots2"]
layout_mode = 0
offset_right = 19.0
offset_bottom = 19.0
texture = ExtResource("13_u1ehg")
expand_mode = 1

[node name="InvSlots3" parent="NinePatchRect/GridContainer2" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer2/InvSlots3"]
layout_mode = 0
offset_left = 2.0
offset_right = 19.0
offset_bottom = 19.0
texture = ExtResource("14_pvqke")
expand_mode = 1

[node name="InvSlots4" parent="NinePatchRect/GridContainer2" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer2/InvSlots4"]
layout_mode = 0
offset_top = -1.0
offset_right = 19.0
offset_bottom = 19.0
texture = ExtResource("13_u1ehg")

[node name="InvSlots5" parent="NinePatchRect/GridContainer2" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer2/InvSlots5"]
layout_mode = 0
offset_right = 19.0
offset_bottom = 19.0
texture = ExtResource("15_8mi7o")
expand_mode = 1

[node name="InvSlots6" parent="NinePatchRect/GridContainer2" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer2/InvSlots6"]
layout_mode = 0
offset_top = -1.0
offset_right = 20.0
offset_bottom = 19.0
texture = ExtResource("13_u1ehg")

[node name="TextureRect4" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 53.0
offset_top = 38.0
offset_right = 80.0
offset_bottom = 48.0
texture = ExtResource("16_anl77")
expand_mode = 1

[node name="beef cooked" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 4.0
offset_top = 69.0
offset_right = 28.0
offset_bottom = 78.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="pattyb cooked" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 28.0
offset_top = 69.0
offset_right = 52.0
offset_bottom = 78.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="lamb cooked" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 52.0
offset_top = 69.0
offset_right = 76.0
offset_bottom = 78.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="pattyl cooked" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 76.0
offset_top = 69.0
offset_right = 100.0
offset_bottom = 78.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="chicken cooked" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 100.0
offset_top = 69.0
offset_right = 124.0
offset_bottom = 78.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="pattyc cooked" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 124.0
offset_top = 69.0
offset_right = 148.0
offset_bottom = 78.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="GridContainer3" type="GridContainer" parent="NinePatchRect"]
layout_mode = 0
offset_left = 5.0
offset_top = 81.0
offset_right = 73.0
offset_bottom = 101.0
columns = 6

[node name="InvSlots" parent="NinePatchRect/GridContainer3" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer3/InvSlots"]
layout_mode = 0
offset_left = 1.0
offset_top = 3.0
offset_right = 19.0
offset_bottom = 18.0
texture = ExtResource("17_ek6kc")
expand_mode = 1

[node name="InvSlots2" parent="NinePatchRect/GridContainer3" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer3/InvSlots2"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 19.0
texture = ExtResource("18_dpvpa")
expand_mode = 1

[node name="InvSlots3" parent="NinePatchRect/GridContainer3" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer3/InvSlots3"]
layout_mode = 0
offset_top = 3.0
offset_right = 19.0
offset_bottom = 18.0
texture = ExtResource("19_skfyl")
expand_mode = 1

[node name="InvSlots4" parent="NinePatchRect/GridContainer3" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer3/InvSlots4"]
layout_mode = 0
offset_right = 19.0
offset_bottom = 19.0
texture = ExtResource("18_dpvpa")
expand_mode = 1

[node name="InvSlots5" parent="NinePatchRect/GridContainer3" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer3/InvSlots5"]
layout_mode = 0
offset_top = 4.0
offset_right = 20.0
offset_bottom = 19.0
texture = ExtResource("20_v28cv")
expand_mode = 1

[node name="InvSlots6" parent="NinePatchRect/GridContainer3" instance=ExtResource("3_6acnr")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer3/InvSlots6"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 19.0
texture = ExtResource("18_dpvpa")
expand_mode = 1

[node name="beef steak" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 5.0
offset_top = 102.0
offset_right = 29.0
offset_bottom = 111.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="beef burger" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 28.0
offset_top = 102.0
offset_right = 52.0
offset_bottom = 111.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="lamb" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 52.0
offset_top = 102.0
offset_right = 76.0
offset_bottom = 111.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="lamb burger" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 76.0
offset_top = 102.0
offset_right = 100.0
offset_bottom = 111.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="chicken" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 100.0
offset_top = 102.0
offset_right = 124.0
offset_bottom = 111.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="chicken burger" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 124.0
offset_top = 102.0
offset_right = 148.0
offset_bottom = 111.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="vege burger" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 5.0
offset_top = 144.0
offset_right = 29.0
offset_bottom = 153.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="egg" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 73.0
offset_top = 144.0
offset_right = 97.0
offset_bottom = 153.0
texture_normal = ExtResource("8_frvdk")
texture_pressed = ExtResource("9_it2lg")

[node name="TextureRect3" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 5.0
offset_top = 113.0
offset_right = 29.0
offset_bottom = 122.0
texture = ExtResource("21_2vxsl")

[node name="TextureRect5" type="TextureRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 74.0
offset_top = 113.0
offset_right = 98.0
offset_bottom = 122.0
texture = ExtResource("22_frvdk")

[node name="InvSlots" parent="NinePatchRect" instance=ExtResource("3_6acnr")]
layout_mode = 0
offset_left = 5.0
offset_top = 123.0
offset_right = 25.0
offset_bottom = 143.0

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/InvSlots"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 18.0
texture = ExtResource("18_dpvpa")
expand_mode = 1

[node name="InvSlots2" parent="NinePatchRect" instance=ExtResource("3_6acnr")]
layout_mode = 0
offset_left = 74.0
offset_top = 123.0
offset_right = 94.0
offset_bottom = 143.0

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/InvSlots2"]
layout_mode = 0
offset_right = 19.0
offset_bottom = 20.0
texture = ExtResource("23_it2lg")
expand_mode = 1

[connection signal="pressed" from="NinePatchRect/vege burger" to="." method="_on_vege_burger_pressed"]
[connection signal="pressed" from="NinePatchRect/egg" to="." method="_on_egg_pressed"]
